Convert standalone embedded application into a standard Web Application (WAR) for app servers